#1592 Merge changes between 09.04 (rev 985905) and 10.04 (rev 986592)