@@ -24,7 +24,7 @@ import java.util.HashMap;
 import java.util.Map;
 
 import org.ofbiz.base.util.UtilMisc;
-import org.ofbiz.entity.GenericDelegator;
+import org.ofbiz.entity.Delegator;
 import org.ofbiz.entity.GenericEntityException;
 import org.ofbiz.entity.GenericValue;
 import org.ofbiz.service.DispatchContext;
@@ -50,7 +50,7 @@ public class RoutingServices {
      */
     public static Map getEstimatedTaskTime(DispatchContext ctx, Map context) {
         Map result = new HashMap();
-        GenericDelegator delegator = ctx.getDelegator();
+        Delegator delegator = ctx.getDelegator();
         LocalDispatcher dispatcher = ctx.getDispatcher();
 
         // The mandatory IN parameters
@@ -68,12 +68,12 @@ public class RoutingServices {
         try {
             task = delegator.findByPrimaryKey("WorkEffort", UtilMisc.toMap("workEffortId", taskId));
         } catch (GenericEntityException gee) {
-            ServiceUtil.returnError("Error finding routing task with id: " + taskId);
+            return ServiceUtil.returnError("Error finding routing task with id: " + taskId);
         }
         // FIXME: the ProductionRun.getEstimatedTaskTime(...) method will be removed and
         // its logic will be implemented inside this method.
         long estimatedTaskTime = ProductionRun.getEstimatedTaskTime(task, quantity, productId, routingId, dispatcher);
-        result.put("estimatedTaskTime", new Long(estimatedTaskTime));
+        result.put("estimatedTaskTime", Long.valueOf(estimatedTaskTime));
         if (task != null && task.get("estimatedSetupMillis") != null) {
             result.put("setupTime", task.getBigDecimal("estimatedSetupMillis"));
         }
